# matchmaker

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
data_reader/: CMakeLists.txt
data_reader/common/matchmaker/: data_reader_common.h
data_reader/scripts/: build_and_install.py
data_reader/src/: matchmaker_data_reader.cpp
data_reader/stage_0/: CMakeLists.txt
data_reader/stage_0/include/matchmaker/: parts_of_speech.h
data_reader/stage_0/scripts/: build_and_install.py
data_reader/stage_0/src/: Prefix.cpp  Prefix.h  SerialTask.cpp  SerialTask.h  Stage0Data.cpp  Stage0Data.h  data_reader_stage_0.cpp  prepare_prefixes.cpp  prepare_prefixes.h  read_3201.cpp  read_3201.h  read_3201_acronyms.cpp  read_3201_acronyms.h  read_3201_common.cpp  read_3201_common.h  read_3201_compound.cpp  read_3201_compound.h  read_3201_crosswd.cpp  read_3201_crosswd.h  read_3201_crswd_d.cpp  read_3201_crswd_d.h  read_3201_fnames.cpp  read_3201_fnames.h  read_3201_mnames.cpp  read_3201_mnames.h  read_3201_names.cpp  read_3201_names.h  read_3201_places.cpp  read_3201_places.h  read_3201_single.cpp  read_3201_single.h  read_3202.cpp  read_3202.h  read_3203.cpp  read_3203.h  read_crumbs.cpp  read_crumbs.h  read_keys.cpp  read_keys.h  save_matchables.cpp  (+1 more)
data_reader/stage_1/: CMakeLists.txt
data_reader/stage_1/scripts/: build_and_install.py
data_reader/stage_1/src/: SerialTask.cpp  SerialTask.h  Stage1Data.h  calculate_longest_words.cpp  calculate_longest_words.h  create_books.cpp  create_books.h  data_reader_stage_1.cpp  discover_book_vocabulary.cpp  discover_book_vocabulary.h  discover_embedded_words.cpp  discover_embedded_words.h  fill_reflections.cpp  fill_reflections.h  generate_ordinal_summation_header.cpp  generate_ordinal_summation_header.h  patch_matchables.cpp  patch_matchables.h  read_3202.cpp  read_3202.h  read_51155.cpp  read_51155.h  read_crumbs.cpp  read_crumbs.h  read_keys.cpp  read_keys.h  read_links.cpp  read_links.h  record_word_locations.cpp  record_word_locations.h
include/matchmaker/: matchmaker.h
scripts/: build_and_install.py  build_and_install_test_program.py  generate_code.py  prepare_letters.py  prepare_matchables.py
src/: matchmaker.cpp
templates/: book.cpp  book.h  chapter.cpp  chapter.h  internal_interface.h  leaf.cpp  leaf.h  parent.cpp  parent.h
test_program/: CMakeLists.txt
test_program/scripts/: build_and_install_test_program.py
test_program/src/: test_program.cpp
workspace_common/: BookWord.h  CMakeLists.txt  config.cmake.in
